# ros2_boldbot

./: README.md
behavior/: get_up.py  look_at_ball.py  package.xml  setup.cfg  setup.py  walk_straight.py
boldbot_bringup/: CMakeLists.txt  package.xml
boldbot_bringup/config/: rc2019_params.yml
boldbot_bringup/launch/: boldbot_bringup.launch.py  boldbot_bringup_dummy.launch.py  boldbot_sim_bringup.launch.py  rc2019.launch.py
boldbot_bringup/meshes/: rchl_field_kid_2019.dae
boldbot_bringup/worlds/: rchl_kid_2019.world
boldbot_description/: CMakeLists.txt  package.xml
boldbot_description/urdf/: boldbot.urdf  boldbot.urdf.xacro
boldbot_dummy_sensors/src/: dummy_joint_states.cpp
boldbot_gazebo_plugin/: CMakeLists.txt  package.xml
boldbot_gazebo_plugin/include/boldbot_gazebo_plugin/: boldbot_gazebo_plugin.hpp
boldbot_gazebo_plugin/src/: boldbot_gazebo_plugin.cpp  boldbot_gazebo_plugin.hpp
boldbot_sim/: CMakeLists.txt  package.xml
boldbot_sim/launch/: boldbot_sim_bringup.launch.py
boldbot_sim/worlds/: rchl_kid_2019.world
dummy_sensors/: CMakeLists.txt  package.xml
dummy_sensors/src/: dummy_joint_states.cpp
parameter/: ik_walk.yml
